# beginning-bazel

./: README.md
chapter_03/src/: BUILD.bazel  HelloWorld.java  IntMultiplier.java
chapter_04/: WORKSPACE
chapter_04/src/: BUILD.bazel  IntMultiplierTest.java
chapter_05/: WORKSPACE
chapter_05/src/: BUILD.bazel  EchoClient.java  echo_server.go
chapter_06/src/: BUILD.bazel  echo_server.go
chapter_07/: WORKSPACE
chapter_07/client/echo_client/command_line/: BUILD.bazel  EchoClient.java
chapter_07/proto/: BUILD.bazel  transmission_object.proto
chapter_07/server/echo_server/: BUILD.bazel
chapter_08/: WORKSPACE
chapter_08/proto/: transceiver.proto
chapter_08/server/echo_server/: echo_server.go
chapter_09/: WORKSPACE  source_android_bash_setup__linux
chapter_09/client/echo_client/android/: AndroidManifest.xml  EchoClientMainActivity.java
chapter_09/client/echo_client/android/res/layout/: echo_client_main_activity.xml
chapter_09/client/echo_client/command_line/: EchoClient.java
chapter_09/proto/: BUILD.bazel
chapter_09/server/echo_server/: BUILD.bazel
chapter_10/: WORKSPACE
chapter_10/client/echo_client/android/: BUILD.bazel
chapter_10/client/echo_client/command_line/: BUILD.bazel
chapter_10/client/echo_client/ios/: AppDelegate.swift  BUILD.bazel  MainViewController.swift  fix_Xcode_version.sh
chapter_10/proto/: BUILD.bazel
