# package(default_visibility = ["//src:__pkg__"])

load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "transmission_object_proto",
    srcs = ["transmission_object.proto"],
)

java_proto_library(
    name = "transmission_object_java_proto",
    visibility = ["//client/echo_client:__subpackages__"],
    deps = [":transmission_object_proto"],
)

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_proto_library(
    name = "transmission_object_go_proto",
    importpath = "transmission_object",
    proto = ":transmission_object_proto",
    visibility = ["//server/echo_server:__pkg__"],
)

proto_library(
    name = "transceiver_proto",
    srcs = ["transceiver.proto"],
    deps = [
        ":transmission_object_proto",
    ],
)

go_proto_library(
    name = "transceiver_go_proto_grpc",
    compiler = "@io_bazel_rules_go//proto:go_grpc",
    importpath = "transceiver",
    proto = ":transceiver_proto",
    visibility = ["//server/echo_server:__pkg__"],
    deps = [":transmission_object_go_proto"],
)

java_proto_library(
    name = "transceiver_java_proto",
    visibility = ["//client/echo_client:__subpackages__"],
    deps = [":transceiver_proto"],
)

load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

java_grpc_library(
    name = "transceiver_java_proto_grpc",
    srcs = [":transceiver_proto"],
    visibility = ["//client/echo_client:__subpackages__"],
    deps = [":transceiver_java_proto"],
)

load("@build_bazel_rules_swift//swift:swift.bzl", "swift_grpc_library", "swift_proto_library")

swift_proto_library(
    name = "transmission_object_swift_proto",
    visibility = ["//client/echo_client:__subpackages__"],
    deps = [":transmission_object_proto"],
)

swift_proto_library(
    name = "transceiver_swift_proto",
    visibility = ["//client/echo_client:__subpackages__"],
    deps = [":transceiver_proto"],
)

swift_grpc_library(
    name = "transceiver_swift_proto_grpc",
    srcs = [":transceiver_proto"],
    flavor = "client",
    visibility = ["//client/echo_client:__subpackages__"],
    deps = [":transceiver_swift_proto"],
)
