load("@rules_android//android:rules.bzl", "android_binary", "android_library")

android_library(
    name = "echo_client_android_activity",
    srcs = ["EchoClientMainActivity.java"],
    custom_package = "client.echo_client.android",
    manifest = "AndroidManifest.xml",
    resource_files = [
        "res/layout/echo_client_main_activity.xml",
    ],
    deps = [
        "//proto:transceiver_java_proto",
        "//proto:transceiver_java_proto_grpc",
        "//proto:transmission_object_java_proto",
        "@io_grpc_grpc_java//api",
        "@io_grpc_grpc_java//okhttp",
        "@io_grpc_grpc_java//stub",
    ],
)

android_binary(
    name = "echo_client_android_app",
    custom_package = "client.echo_client.android",
    manifest = "AndroidManifest.xml",
    deps = [":echo_client_android_activity"],
)
